# swim-apps-reviews-analysis

./: .gitignore  My EndNote Library.enl  README.md  crawler.ipynb  crawler_bk.ipynb  da.ipynb  duoswim.csv  form.csv  myswimpro.csv  pyproject.toml  swimcom.csv  swimming app.xlsx  test.py
.idx/: dev.nix
CTSA/: count_data.py  grades.csv  pyproject.toml  xlsx2csv.py  成績資料匯出.xlsx  成績資料匯出2024.xlsx
CTSA/data/: grades.sql  成績資料匯出2022.xlsx  成績資料匯出2023.xlsx
data_mining/: Concat_data.ipynb  Concat_new_data.ipynb  DataMining.ipynb  LDA.ipynb  LDA.py  SortByRating.ipynb  cal_reviews.ipynb  crawler.ipynb  crawler_app_info.ipynb  crawler_app_info.js  crawler_apple.ipynb  crawler_google.ipynb  da.ipynb  da1.ipynb  da2.ipynb  da3.ipynb  da4.ipynb  feature_sim_score_form-swim_high_ratings.csv  feature_sim_score_swim-com_low_ratings.csv  feature_sim_score_swimup_high_ratings.csv  feature_sim_score_swimup_low_ratings.csv  fix_figure.ipynb  kw_db.csv  package-lock.json  prompt.txt  pyproject.toml  sentiment_analysis.ipynb  swimming app.xlsx  swimming_app.xlsx  test.py
data_mining/crawler_result/: feature_sim_score_duoswim.csv  feature_sim_score_form.csv  feature_sim_score_myswimpro.csv  feature_sim_score_swimcom.csv  feature_sim_score_swimup.csv
data_mining/crawler_result/duoswim/: duoswim_high_ratings.csv  duoswim_low_ratings.csv  duoswim_sentiment.csv
data_mining/crawler_result/form-swim/: feature_sim_score_form-swim.csv  form-swim.csv  form-swim_sentiment.csv  form_with_keywords.csv
data_mining/crawler_result/myswimpro/: feature_sim_score_myswimpro.csv  myswimpro.csv  myswimpro_low_ratings.csv
data_mining/crawler_result/swim-com/: feature_sim_score_swim-com.csv  swim-com_high_ratings.csv  swim-com_sentiment.csv  swimcom_with_keywords.csv
data_mining/crawler_result/swimup/: swimup_sentiment.csv  swimup_with_keywords.csv
data_mining/new_result/: all_concat.csv  all_concat_sentiment.csv  all_concat_sentiment.xlsx  app_info_google.csv  app版本紀錄.docx  duoswim.csv  form-swim.csv  keywords.csv  myswimpro.csv  swim-com.csv  swimup.csv
data_mining/new_result/duoswim/: duoswim_apple.csv  duoswim_concat.csv
data_mining/new_result/form-swim/: form-swim_GooglePlayStore.csv  form-swim_apple.csv  form-swim_concat.csv
data_mining/new_result/myswimpro/: myswimpro_GooglePlayStore.csv  myswimpro_apple.csv  myswimpro_concat.csv
data_mining/new_result/swim-com/: swim-com_GooglePlayStore.csv  swim-com_apple.csv  swim-com_concat.csv
data_mining/result/: prompt.txt
mock_data/: chart.ipynb  data.ipynb  filtered_data.csv  mock_data.ipynb  pyproject.toml  sample_data.csv  sample_data2.csv  sample_data3.csv  sample_data4.csv  sample_data5.csv  world.csv  world_after_2017.csv
survey/: 0405我的游泳日記測試.csv  0506.csv  pyproject.toml  survey.ipynb
(+65 files in other folders)
