[tool.poetry]
name = "swim"
version = "0.1.0"
description = ""
authors = ["momonong <morrischen2.9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
app-store-scraper = "^0.3.5"
pandas = "^2.1.0"
numpy = "^1.25.2"
yake = "^0.4.8"
summa = "^1.2.0"
torch = ">=2.0.0, !=2.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
